# Qasa

./: .dockerignore  .gitignore  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  Dockerfile  Documentation.md  IMPROVEMENT_ROADMAP.md  INVESTIGATION_REPORT.md  LICENSE  OUTDATED_CLEANUP_SUMMARY.md  PUBLISHING_CHECKLIST.md  PUBLISH_NOW.md  README.md  READY_TO_PUBLISH.md  RECOMMENDED_NEXT_STEPS_COMPLETED.md  WEB_FEATURES_TEST.md  WEB_FEATURES_VERIFICATION.md  clean.sh  cleanup_duplicates.sh  deploy.sh  deploy_qasa.sh  docker-compose.prod.yml  docker-compose.yml  main.go  nginx.conf  project_tasks.md  quick-deploy.sh  rfc8439_analysis.md  roadmap.md  run_web_ui.sh  security_review.md  test_web_features.html  verify_rfc8439.rs
.cursor/rules/: project-details.mdc  project-tasks.mdc
.github/workflows/: ci.yml  deploy.yml
benches/: crypto_benchmarks.rs
docs/: protocols_implementation.md
docs/api/: crypto_api.md  security_guide.md  threat_model.md
docs/guides/: getting_started.md
examples/: aes_streaming.rs  canary_buffer.rs  constrained_kyber.rs  password_derived_key.rs  protocols_demo.rs  secure_memory.rs  secure_memory_locking.rs  signature_compression.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_aes_gcm.rs  fuzz_dilithium.rs  fuzz_high_level_api.rs  fuzz_secure_memory.rs  fuzz_target_1.rs
monitoring/: prometheus.yml
scripts/: pre-publish.sh  publish.sh
src/: error.rs  ffi.rs  go.mod  go.sum  lib.rs  main.go  main.rs  protocols.rs  secure_memory.rs  simd.rs  simple.rs  utils.rs
src/aes/: aes.rs  mod.rs
src/bike/: bike.rs  decoder.rs  inversion.rs  mod.rs  parameters.rs  polynomial.rs  tests.rs
src/chacha20poly1305/: chacha20.rs  chacha20poly1305.rs  mod.rs  poly1305.rs  tests.rs
src/common/: cleanup.go  go.mod  go.sum  notifications.go  utils.go  utils_test.go
src/crypto/: Cargo.toml  README.md  SECURITY.md  deny.toml  fix_errors.py  fix_key_management_errors.py
src/crypto/benches/: crypto_benchmarks.rs
src/crypto/docs/: SECURITY_GUIDE.md  THREAT_MODEL.md
src/crypto/examples/: aes_gcm_aad.rs  from_bytes_test.rs  hybrid_encryption.rs  key_rotation.rs  optimized_signatures.rs  oqs_api_test.rs  oqs_correct_api.rs  oqs_minimal.rs  oqs_simple.rs  oqs_test.rs  oqs_working_test.rs  password_derived_key.rs  quantum_safe_chat.rs  quantum_signatures.rs  secure_communication.rs  secure_memory.rs
src/crypto/src/: error.rs  ffi.rs  lib.rs  protocols.rs  secure_memory.rs  simd.rs  simple.rs  utils.rs
src/crypto/src/aes/: aes.rs  impl_aes.rs  impl_aes.rs.actual  mod.rs  tests.rs
src/crypto/src/dilithium/: dilithium.rs  impl_dilithium.rs  impl_dilithium.rs.actual  mod.rs  optimizations.rs
src/crypto/src/key_management/: key_management_original.rs  mod.rs  password.rs  rotation.rs  storage.rs  tests.rs
src/crypto/src/kyber/: impl_kyber.rs  kyber.rs  mod.rs  tests.rs
src/crypto/src/security/: audit.rs  constant_time.rs  mod.rs  policy.rs  side_channel.rs
src/crypto/src/simd/: arm_simd.rs  x86_simd.rs
src/crypto/tests/: constant_time_integration.rs  integration_tests.rs  lib.rs
src/dilithium/: compression.rs  dilithium.rs  mod.rs  tests.rs
src/hybrid/: composite.rs  hybrid_encryption.rs  hybrid_kem.rs  hybrid_signature.rs  mod.rs  tests.rs
src/key_management/: hsm.rs  mod.rs  storage.rs
src/kyber/: kyber.rs  kyber.rs.backup  lean.rs  mod.rs
src/mobile/: go.mod  optimization.go
src/network/: README.md  build_crypto.sh  discovery_commands.go  go.mod  main.go  qasa-cli.sh  qasa-run.sh  setup_web.sh  web_server.go
src/network/.qasa/: keystore.json
src/network/discovery/: bootstrap.go  dht.go  discovery_test.go  enhanced_discovery.go  enhanced_discovery_support.go  geo_filter.go  geo_filter_test.go  identifier.go  integration_test.go  mdns.go
src/network/encryption/: README.md  factory.go  handshake.go  interface.go  key_rotation.go  key_store.go  message_crypto.go  provider.go  qasa_crypto.go  qasa_crypto.h  session_key.go
src/security/: audit.rs  constant_time.rs  constant_time.rs.backup  formal_verification.rs  mod.rs  policy.rs  side_channel.rs
src/simd/: arm_simd.rs  wasm_simd.rs  x86_simd.rs
src/sphincsplus/: mod.rs  parameters.rs  sphincsplus.rs  tests.rs
src/updater/: go.mod  updater.go
src/web/: README.md  app.js  build.sh  discovery.js  enhanced-app.js  enhanced-crypto.js  enhanced-discovery.js  enhanced-network.js  enhanced-styles.css  enhanced-ui.js  go.mod  go.sum  index.html  main.go  main.go.backup  manifest.json  styles.css  sw.js  usability_test.html  utils.js  web_server.go
tests/: integration_tests.rs  test_constant_time_simple.rs  test_memory_efficiency.rs  test_signature_compression.rs  test_vectors_main.rs  test_vectors_simple.rs
tests/test_vectors/: aes_gcm.rs  bike.rs  chacha20poly1305.rs  dilithium.rs  hybrid.rs  kyber.rs  mod.rs  secure_memory.rs  sphincsplus.rs
(+34 files in other folders)
