[package]
name = "qasa-crypto"
version = "0.1.0"
edition = "2021"
description = "Post-quantum cryptography module for QaSa secure chat application"
authors = ["QaSa Team"]
license = "MIT"

[lib]
name = "qasa_crypto"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Post-quantum cryptography library
oqs = "0.8.0"
# For AES-GCM implementation
aes-gcm = "0.10.3"
# For more general cryptographic operations
rand = "0.8.5"
getrandom = "0.2.10"
# For serialization/deserialization
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
bincode = "1.3.3"
# For error handling
thiserror = "1.0.47"
# For key management and storage
chacha20poly1305 = "0.10.1"
argon2 = "0.5.0"
base64 = "0.13.0"
# For hashing operations
sha2 = "0.10.6"
# For handling home directory paths
dirs = "5.0.1"
libc = "0.2.172"

[dev-dependencies]
criterion = "0.5.1"
tempfile = "3.8.0"

[[bench]]
name = "crypto_benchmarks"
harness = false

[features]
default = []
# Hardware acceleration is currently not available in the oqs crate as a feature
# Leaving this commented out for future reference
# hardware-acceleration = ["oqs/openssl"]
